src/styles/pages/admin.module.css
.dashContainer {
  width: 100%;
  margin: 0 auto;
  border: 2px solid #472d5b;
  border-radius: 10px;
  margin-top: 3%;
}

.headingNav {
  display: flex;
  justify-content: space-between;
  align-items: center;
  background-color: #472d5b;
  padding: 1%;
}

.dashboard {
  padding: 1%;
}

.table {
  border: 5px solid black;
  width: 100%;
}

@media (max-width: 650px) {
  .headingNav {
    flex-flow: column nowrap;
    text-align: center;
    height: 13vh;
  }
}

@media (max-width: 500px) {
  .headingNav {
    height: 12vh;
  }
}

